main/fluentd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fluentd
  name: fluentd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fluentd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: fluentd
    spec:
      containers:
        - image: xclaugod/my-fluentd-image
          name: fluentd
          ports:
            - containerPort: 9884
              protocol: TCP
          volumeMounts:
            - mountPath: /fluentd/etc/fluent.conf
              name: fluentd-cm0
              subPath: fluent.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: fluent.conf
                path: fluent.conf
            name: fluentd-cm0
          name: fluentd-cm0
