main/init-kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: init-kafka
  name: init-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: init-kafka
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: init-kafka
    spec:
      containers:
        - args:
            - |2
              kafka-topics --bootstrap-server PLAINTEXT://kafka:9092 --list
              kafka-topics --bootstrap-server PLAINTEXT://kafka:9092 --create --if-not-exists --topic locations --replication-factor 1 --partitions 1
              kafka-topics --bootstrap-server PLAINTEXT://kafka:9092 --list
          command:
            - /bin/bash
            - -c
          image: confluentinc/cp-kafka:latest
          name: init-kafka
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
