main/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: kibana
    spec:
      containers:
        - image: docker.elastic.co/kibana/kibana:8.13.4
          name: kibana
          ports:
            - containerPort: 5601
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/kibana/config/kibana.yml
              name: kibana-cm0
              subPath: kibana.yml
      hostname: kibana
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: config.yml
                path: kibana.yml
            name: kibana-cm0
          name: kibana-cm0
