main/pod-spark-6c9588fd58-lhmzd.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  creationTimestamp: "2024-06-20T09:50:26Z"
  generateName: spark-6c9588fd58-
  labels:
    io.kompose.service: spark
    pod-template-hash: 6c9588fd58
  name: spark-6c9588fd58-lhmzd
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: spark-6c9588fd58
    uid: 1e541a45-9b92-4621-ba0f-968ed58e191c
  resourceVersion: "1111"
  uid: 685edbce-b308-4bc3-b3da-cf8d6866b319
spec:
  containers:
  - env:
    - name: SPARK_DRIVER_MEMORY
      value: 2g
    - name: SPARK_MASTER_NAME
      value: spark-master
    - name: SPARK_MASTER_PORT
      value: "7077"
    - name: SPARK_WORKER_CORES
      value: "2"
    - name: SPARK_WORKER_MEMORY
      value: 2g
    image: spark
    imagePullPolicy: Always
    name: spark
    ports:
    - containerPort: 4040
      protocol: TCP
    - containerPort: 8082
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-78gnb
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-78gnb
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-06-20T09:53:27Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2024-06-20T09:50:26Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-06-20T09:56:55Z"
    message: 'containers with unready status: [spark]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-06-20T09:56:55Z"
    message: 'containers with unready status: [spark]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-06-20T09:50:26Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://8f69c042d98717a01f7e73b1b1463b9474e4066c4016b7a822bb8545eda3a04e
    image: spark:latest
    imageID: docker-pullable://spark@sha256:b619106b005533f7322058211491b922184b79cf00f1f47db836b90bda550f0b
    lastState:
      terminated:
        containerID: docker://8f69c042d98717a01f7e73b1b1463b9474e4066c4016b7a822bb8545eda3a04e
        exitCode: 0
        finishedAt: "2024-06-20T09:56:54Z"
        reason: Completed
        startedAt: "2024-06-20T09:56:53Z"
    name: spark
    ready: false
    restartCount: 5
    started: false
    state:
      waiting:
        message: back-off 2m40s restarting failed container=spark pod=spark-6c9588fd58-lhmzd_default(685edbce-b308-4bc3-b3da-cf8d6866b319)
        reason: CrashLoopBackOff
  hostIP: 192.168.49.2
  hostIPs:
  - ip: 192.168.49.2
  phase: Running
  podIP: 10.244.0.9
  podIPs:
  - ip: 10.244.0.9
  qosClass: BestEffort
  startTime: "2024-06-20T09:50:26Z"
