main/spark-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: spark
  name: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: spark
    spec:
      containers:
        - env:
            - name: SPARK_DRIVER_MEMORY
              value: 2g
            - name: SPARK_MASTER_NAME
              value: spark-master
            - name: SPARK_MASTER_PORT
              value: "7077"
            - name: SPARK_WORKER_CORES
              value: "2"
            - name: SPARK_WORKER_MEMORY
              value: 2g
          image: xclaugod/my-spark-image
          name: spark
          ports:
            - containerPort: 4040
              protocol: TCP
            - containerPort: 8082
              protocol: TCP
      restartPolicy: Always
