main/fluentd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fluentd
  name: fluentd
spec:
  ports:
    - name: "9884"
      port: 9884
      targetPort: 9884
  selector:
    io.kompose.service: fluentd
