main/spark-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: spark
  name: spark
spec:
  ports:
    - name: "4040"
      port: 4040
      targetPort: 4040
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: spark
