main/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prova.www.claudiocloud.it # Replace with your actual domain name
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service: 
            name: kafka-ui
            port: 
              number: 8080  # kafka service port
